--- a/lab2/ml.ipynb
+++ b/lab2/ml.ipynb
@@ -2,35 +2,89 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "source": [
     "import numpy as np\n",
+    "from sklearn.datasets import make_regression\n",
+    "#TASK 1\n",
     "\n",
-    "import matplotlib as mpl\n",
-    "\n",
-    "print(\"CRUD numbers\")\n",
-    "x = np.random.randint(0, 10)\n",
-    "y = np.random.randint(0, 10)\n",
-    "print(\"x = \", x)\n",
-    "print(\"y = \", y)\n",
-    "print(\"x+y = \", x+y)\n",
-    "print(\"x-y = \", x-y)\n",
-    "print(\"x*y = \", x*y)\n",
-    "print(\"x/y = \", x/y)\n",
-    "\n",
-    "print()\n",
-    "print(\"CRUD array\")\n",
-    "print(\"Creation: \")\n",
-    "array1 = np.arange(10,50,4)"
+    "X, y = make_regression( n_samples=100,\n",
+    "    n_features=100,\n",
+    "    n_informative=10,\n",
+    "    n_targets=1,\n",
+    "    bias=0.0,\n",
+    "    effective_rank=None,\n",
+    "    tail_strength=0.5,\n",
+    "    noise=0.0,\n",
+    "    shuffle=True,\n",
+    "    coef=False,\n",
+    "    random_state=None,)\n",
+    "print(X,y)\n",
+    "\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[ 1.16057997  0.62960433  0.47627175 ...  0.37215269  1.18640085\n",
+      "  -1.70086003]\n",
+      " [-0.59141533 -0.60897595  1.52825752 ...  0.26073194 -0.51221615\n",
+      "   0.28140147]\n",
+      " [ 0.15608417  0.43718501 -0.34886321 ... -1.04485973  1.23985379\n",
+      "  -1.16612782]\n",
+      " ...\n",
+      " [ 0.60955246  1.41758811  1.79892213 ... -0.91830571  2.50354986\n",
+      "   0.74548258]\n",
+      " [-0.99687242  0.14402225  0.95299439 ...  0.17876625  0.10374108\n",
+      "  -0.96258932]\n",
+      " [ 0.12758095  0.74206833 -0.95241162 ... -1.16955823  0.80119118\n",
+      "   1.61411912]] [ -92.4899264   272.13489365  509.92130004 -254.88623616  -65.27461246\n",
+      "  149.86432348 -156.4944085  -191.23038754   27.80145233 -200.61285231\n",
+      "  -28.78019136  273.69378636   -8.42032425  178.14964302  -19.59615821\n",
+      "   64.44746993  175.68411846  195.02559467   39.76422285 -184.40098453\n",
+      " -248.81508686  281.10763267   78.65068777  249.3086117   433.20126541\n",
+      "   60.145366    183.15555402  267.05982395    5.02927948  -43.69313517\n",
+      "   35.25502821  326.77231944 -301.64159515 -193.26107897 -301.40899778\n",
+      "   56.45116702 -143.34604348  -29.75813579  -42.61904732 -177.09105403\n",
+      "   22.88813076 -137.03466414 -152.45075583   85.20121239  -74.96572424\n",
+      " -327.7779716    63.66763223 -261.69077411   90.14198767   24.92195756\n",
+      "  -86.24945782  197.23457734  220.20099534   36.76449526  307.73394842\n",
+      "   67.67083363 -111.70829693  -29.61167616  167.44138677 -177.67785175\n",
+      "  -54.00579458 -131.53730702   21.35832414  432.90993443 -183.35518688\n",
+      "  -42.37560622  197.34435927 -136.35972825 -318.46710144 -394.02476264\n",
+      " -396.53825995  259.93292588  -47.40033315  133.49533444  -26.66216477\n",
+      "  181.62956984 -207.42635544  124.59006085   -5.69193874  496.09444818\n",
+      "   20.13977373 -150.38929694 -200.73880508  -68.69433227 -209.48948238\n",
+      " -136.37774913   85.27890214  167.61439718  110.34703657 -103.09269775\n",
+      " -259.28946376  -78.87265426  -99.5220571   208.63693679 -207.69143763\n",
+      "  100.69772204  156.28658414  231.83932354  -82.12733405 -133.8728511 ]\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
  "metadata": {
   "orig_nbformat": 4,
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.7",
+   "mimetype": "text/x-python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "pygments_lexer": "ipython3",
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
+  },
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3.9.7 64-bit"
+  },
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
   }
  },
  "nbformat": 4,
