--- a/lab2/ml.ipynb
+++ b/lab2/ml.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "code",
    "execution_count": 22,
    "source": [
+    "\n",
+    "Лабораторна робота 2\n",
+    "Студентки групи МІТ-31 (підгрупа 2)\n",
+    "Рубан Маргарити\n",
+    "Завдання\n",
+    "Створити набір даних за допомогою DatasetGenerator\n",
+    "Завантажити набір даних для регресії на сайті (у кожного студента має бути інший - прошу організуватись відповідним чином)\n",
+    "(опціонально для отримання відмінної оцінки) Згенерувати набір даних для регресії на основі звичайних можливостей Python.\n",
+    "Для отриманих наборів даних провести встановленні кроки моделювання.\n",
+    "Отримані результати викласти на github у репозиторій ml2021 в основну (default) гілку в папці Lab2.\n",
+    "\n",
     "import numpy as np\n",
     "from sklearn.datasets import make_regression\n",
     "#TASK 1\n",
