--- a/lab3/ml.ipynb
+++ b/lab3/ml.ipynb
@@ -5,15 +5,14 @@
    "execution_count": 3,
    "source": [
     "Лабораторна робота №3\n",
-    "Викладача групи МІТ-31 (підгрупа 1)\n",
-    "Миколайчука Романа Антоновича\n",
+    "Викладача групи МІТ-31 (підгрупа 2)\n",
+    "Рубан Маргарити\n",
     "Завдання\n",
     "Створити набір даних за допомогою DatasetGenerator\n",
     "Завантажити набір даних для регресії на сайті (у кожного студента має бути інший - прошу організуватись відповідним чином)\n",
     "(опціонально для отримання відмінної оцінки) Згенерувати набір даних для класифікації на основі звичайних можливостей Python.\n",
     "Для отриманих наборів даних провести встановленні кроки моделювання.\n",
-    "Отримані результати викласти на github у репозиторій ml2021 в основну (default) гілку в папці Lab3.\n",
-    "\n",
+    "Отримані результати викласти на github у репозиторій ml2021 в основну (default) гілку в папці Lab3\n",
     "\n",
     "import pandas as pd \n",
     "import seaborn as sns               \n",
@@ -23,7 +22,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "import random as rnd\n",
-    "\n",
     "#task 1 \n",
     "X, y = make_regression( n_samples=100,\n",
     "    n_features=100,\n",
